--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
         
             <div class="col-md-4 col-sm-6">
                 <div   #image1 (click)="showModel(image1)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port1.png" class="w-100" alt="">
+                    <img src="/assets/port1.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
@@ -13,7 +13,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div #image2 (click)="showModel(image2)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port2.png" class="w-100" alt="">
+                    <img src="/assets/port2.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div #image3 (click)="showModel(image3)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port3.png" class="w-100" alt="">
+                    <img src="/assets/port3.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div #image4 (click)="showModel(image4)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port1.png" class="w-100" alt="">
+                    <img src="/assets/port1.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div #image5 (click)="showModel(image5)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port2.png" class="w-100" alt="">
+                    <img src="/assets/port2.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div #image6 (click)="showModel(image6)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port3.png" class="w-100" alt="">
+                    <img src="/assets/port3.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
