--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
         
             <div class="col-md-4 col-sm-6">
                 <div   #image1 (click)="showModel(image1)" class="item overflow-hidden position-relative border-2 rounded-3">
-                    <img src="assets/port1.png" class="w-100" alt="">
+                    <img src="../../../assets/port1.png" class="w-100" alt="">
                     <div class="layer">
                         <i class="text-white fa-solid fa-plus fa-6x"></i>
                     </div>
